# user-center-backend

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
migrations/models/: 0_20250531192742_init.py  1_20250531192855_update.py  2_20250603020039_update.py  3_20250603024201_update.py
migrations/user_center_app/: 0_20250609203028_init.py  1_20250609203903_update.py  2_20250609222343_update.py  3_20250612185241_update.py
scripts/: coverage_generate.py
src/app/: main.py
src/app/api/: __init__.py
src/app/api/v1/: __init__.py  users_router.py
src/app/common/: __init__.py  base_response.py  common_types.py  http_response_utils.py  result_utils.py  status_code.py
src/app/constants/: __init__.py  user_constants.py
src/app/core/: __init__.py  config.py  database.py  lifespan.py  logger.py  redis.py  scheduler.py  session.py
src/app/exceptions/: __init__.py  business_exception.py  global_exception_handler.py
src/app/jobs/: __init__.py  pre_cache_job.py
src/app/models/: __init__.py  base.py  tag.py  temp_code.py  user.py  users.py
src/app/routers/v1/: __init__.py  user_router.py  users_router.py
src/app/schemas/: __init__.py  user.py  users.py
src/app/services/: __init__.py  user_service.py
src/app/temp_code/: soft_delete.py
src/app/utils/: __init__.py  collection_utils.py  key_generator_utils.py  metaclass_utils.py  module_utils.py  string_utils.py
src/tests/: conftest.py
src/tests/intergration/: conftest.py
src/tests/intergration/test_routers/: test_user_router.py  test_users_router.py
src/tests/test_models/: test_users_model.py
src/tests/test_services/: test_user_service.py
src/tests/test_utils/: test_module_utils.py  test_string_utils.py
src/tests/unit/: conftest.py
src/tests/unit/test_services/: test_user_service.py
src/tests/unit/test_utils/: test_collection_utils.py  test_module_utils.py  test_string_utils.py
