[project]
name = "python-uv-init"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "commitizen>=4.8.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".lock",
    ".toml",
    ".yaml",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".md",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    ".python-version",
    ".gitignore",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "__pycache__",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
